--- a/src/components/users/UserForm.css
+++ b/src/components/users/UserForm.css
@@ -1,6 +1,5 @@
 form {
-  display: flex;
-  flex-direction: column;
+  text-align: center;
   margin: auto;
 }
 
@@ -15,21 +14,27 @@ button {
 
 #login-button {
   background-color: greenyellow;
+  width: 80%;
 }
 
 #signup-button #cancel-button {
-  display: flex;
   margin: auto;
 }
 
 #signup-button {
   background-color: blue;
   color: white;
-  width: 100%;
+  width: 80%;
 }
 
 #cancel-button {
   background-color: red;
   color: white;
-  width: 100%;
+  width: 80%;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
